--- a/notebooks/Perceiver/tests.ipynb
+++ b/notebooks/Perceiver/tests.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,11 +280,345 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Real"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import h5py\t\n",
+    "import numpy as np\n",
+    "\n",
+    "DATA_PATH = '../../data/CMU_MOSI/'\n",
+    "VIDEO_PATH = os.path.join(DATA_PATH, 'Video/Segmented')\n",
+    "LABELS_PATH = os.path.join(DATA_PATH, 'CMU_MOSI_Opinion_Labels.csd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_csd = h5py.File(LABELS_PATH, 'r').get(\"Opinion Segment Labels\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['data', 'metadata']>"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_csd.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([2.4], dtype=float32),\n",
+       " array([-0.8], dtype=float32),\n",
+       " array([-1.], dtype=float32),\n",
+       " array([-1.75], dtype=float32),\n",
+       " array([0.], dtype=float32),\n",
+       " array([0.], dtype=float32),\n",
+       " array([0.8], dtype=float32),\n",
+       " array([0.], dtype=float32),\n",
+       " array([0.2], dtype=float32),\n",
+       " array([-1.2], dtype=float32),\n",
+       " array([-0.5], dtype=float32),\n",
+       " array([2.2], dtype=float32),\n",
+       " array([1.8], dtype=float32)]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = list(labels_csd[\"data\"].get(\"03bSnISJMiM\").get(\"features\"))\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.4, -0.8, -1.0, -1.75, 0.0, 0.0, 0.8, 0.0, 0.2, -1.2, -0.5, 2.2, 1.8]"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(np.array(labels_csd[\"data\"].get(\"03bSnISJMiM\").get(\"features\"))[:,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Mustapha\\Documents\\CENTRALESUPELEC_3A\\advanced AI\\multimodal_sentiment_analysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "path = %pwd\n",
+    "if path.split(os.sep)[-1] == 'Perceiver':\n",
+    "    %cd ../.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.data_loaders.cmu_mosi import get_train_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Caching videos for training split: 100%|██████████| 1759/1759 [03:16<00:00,  8.94it/s]\n",
+      "Caching videos for validation split: 100%|██████████| 440/440 [00:48<00:00,  8.98it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_loader, val_loader = get_train_val(batch_size=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(val_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = train_loader.dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(66, 224, 224)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1000][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        [0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        [0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        ...,\n",
+       "        [0.5529412 , 0.50980395, 0.4627451 , ..., 0.2627451 ,\n",
+       "         0.23137255, 0.25490198],\n",
+       "        [0.5294118 , 0.49019608, 0.44705883, ..., 0.29803923,\n",
+       "         0.23921569, 0.24705882],\n",
+       "        [0.50980395, 0.47843137, 0.4392157 , ..., 0.3372549 ,\n",
+       "         0.27058825, 0.23921569]],\n",
+       "\n",
+       "       [[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        [0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        [0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        ...,\n",
+       "        [0.5529412 , 0.50980395, 0.4627451 , ..., 0.2627451 ,\n",
+       "         0.23137255, 0.25490198],\n",
+       "        [0.5294118 , 0.49019608, 0.44705883, ..., 0.29803923,\n",
+       "         0.23921569, 0.24705882],\n",
+       "        [0.50980395, 0.47843137, 0.43529412, ..., 0.3372549 ,\n",
+       "         0.27058825, 0.23921569]],\n",
+       "\n",
+       "       [[0.7294118 , 0.7294118 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        [0.7294118 , 0.7294118 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        [0.7294118 , 0.7294118 , 0.7254902 , ..., 0.91764706,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        ...,\n",
+       "        [0.54509807, 0.5058824 , 0.45490196, ..., 0.2627451 ,\n",
+       "         0.23137255, 0.25490198],\n",
+       "        [0.5254902 , 0.4862745 , 0.4392157 , ..., 0.29803923,\n",
+       "         0.23921569, 0.24705882],\n",
+       "        [0.5058824 , 0.47058824, 0.43137255, ..., 0.3372549 ,\n",
+       "         0.27058825, 0.23921569]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.9098039 ,\n",
+       "         0.9137255 , 0.91764706],\n",
+       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9098039 ,\n",
+       "         0.9137255 , 0.91764706],\n",
+       "        [0.72156864, 0.72156864, 0.7254902 , ..., 0.9137255 ,\n",
+       "         0.9137255 , 0.91764706],\n",
+       "        ...,\n",
+       "        [0.54901963, 0.50980395, 0.45490196, ..., 0.25882354,\n",
+       "         0.23137255, 0.24705882],\n",
+       "        [0.52156866, 0.49019608, 0.4392157 , ..., 0.29411766,\n",
+       "         0.23529412, 0.24705882],\n",
+       "        [0.5019608 , 0.4745098 , 0.42745098, ..., 0.3137255 ,\n",
+       "         0.25490198, 0.24705882]],\n",
+       "\n",
+       "       [[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.9098039 ,\n",
+       "         0.9137255 , 0.91764706],\n",
+       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9098039 ,\n",
+       "         0.9137255 , 0.91764706],\n",
+       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9137255 ,\n",
+       "         0.9137255 , 0.91764706],\n",
+       "        ...,\n",
+       "        [0.54901963, 0.50980395, 0.45882353, ..., 0.25882354,\n",
+       "         0.23137255, 0.24705882],\n",
+       "        [0.52156866, 0.49019608, 0.44313726, ..., 0.29411766,\n",
+       "         0.23529412, 0.24705882],\n",
+       "        [0.5019608 , 0.4745098 , 0.42745098, ..., 0.3137255 ,\n",
+       "         0.25490198, 0.24705882]],\n",
+       "\n",
+       "       [[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.9098039 ,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9098039 ,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9137255 ,\n",
+       "         0.91764706, 0.91764706],\n",
+       "        ...,\n",
+       "        [0.5529412 , 0.5137255 , 0.4627451 , ..., 0.25882354,\n",
+       "         0.23137255, 0.24705882],\n",
+       "        [0.5294118 , 0.49411765, 0.44705883, ..., 0.29411766,\n",
+       "         0.23529412, 0.24705882],\n",
+       "        [0.50980395, 0.47843137, 0.43137255, ..., 0.3137255 ,\n",
+       "         0.25490198, 0.24705882]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1000][0]"
+   ]
   }
  ],
  "metadata": {
@@ -296,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
