adding audio in data loader

--- a/notebooks/Perceiver/tests.ipynb
+++ b/notebooks/Perceiver/tests.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,17 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Mustapha\\Documents\\CENTRALESUPELEC_3A\\advanced AI\\multimodal_sentiment_analysis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "path = %pwd\n",
@@ -422,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,15 +423,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Caching videos for training split: 100%|██████████| 1759/1759 [03:16<00:00,  8.94it/s]\n",
-      "Caching videos for validation split: 100%|██████████| 440/440 [00:48<00:00,  8.98it/s]\n"
+      "Caching videos for training split: 100%|██████████| 1759/1759 [03:20<00:00,  8.77it/s]\n",
+      "Caching videos for validation split: 100%|██████████| 440/440 [00:53<00:00,  8.17it/s]\n"
      ]
     }
    ],
@@ -489,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,22 +490,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(66, 224, 224)"
+       "array([[-3.0517578e-05, -3.0517578e-05],\n",
+       "       [-1.2207031e-04, -1.2207031e-04],\n",
+       "       [-2.1362305e-04, -2.1362305e-04],\n",
+       "       ...,\n",
+       "       [ 0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00,  0.0000000e+00]], dtype=float32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[1000][0].shape"
+    "data[1001][1]"
    ]
   },
   {
