--- a/notebooks/Perceiver/tests.ipynb
+++ b/notebooks/Perceiver/tests.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,24 +414,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from src.data_loaders.cmu_mosi import get_train_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Caching videos for training split: 100%|██████████| 1759/1759 [03:20<00:00,  8.77it/s]\n",
-      "Caching videos for validation split: 100%|██████████| 440/440 [00:53<00:00,  8.17it/s]\n"
+      "Caching videos for training split:   0%|          | 2/1759 [00:00<10:38,  2.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "audio shape:  (96387, 2)\n",
+      "audio shape:  (20597, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Caching videos for training split:   0%|          | 3/1759 [00:01<16:29,  1.77it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "audio shape:  (617628, 2)\n",
+      "audio shape:  (29513, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Caching videos for training split:   0%|          | 6/1759 [00:01<06:58,  4.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "audio shape:  (29142, 2)\n",
+      "audio shape:  (98987, 2)\n",
+      "audio shape:  (29142, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Caching videos for training split:   0%|          | 7/1759 [00:02<08:42,  3.35it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "audio shape:  (41402,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "AxisError",
+     "evalue": "axis 1 is out of bounds for array of dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_211700/1973967532.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_loader\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval_loader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_train_val\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\Mustapha\\Documents\\CENTRALESUPELEC_3A\\advanced AI\\multimodal_sentiment_analysis\\src\\data_loaders\\cmu_mosi.py\u001b[0m in \u001b[0;36mget_train_val\u001b[1;34m(**kwargs)\u001b[0m\n\u001b[0;32m    166\u001b[0m         \u001b[0mbatch_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBATCH_SIZE\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    167\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 168\u001b[1;33m     \u001b[0mtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCMU_MOSI\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"training\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    169\u001b[0m     \u001b[0mval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCMU_MOSI\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"validation\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    170\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Mustapha\\Documents\\CENTRALESUPELEC_3A\\advanced AI\\multimodal_sentiment_analysis\\src\\data_loaders\\cmu_mosi.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, split, train_split, color_space, max_frames, resize, output_type, **kwargs)\u001b[0m\n\u001b[0;32m    145\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvideo_sequences\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    146\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 147\u001b[1;33m             \u001b[0maudio\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_rate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_audio\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseq_name\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\".wav\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    148\u001b[0m             \u001b[1;32massert\u001b[0m \u001b[0msample_rate\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m16000\u001b[0m \u001b[1;31m# FIXME : remove me later, note efficient !\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    149\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maudio_sequences\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maudio\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Mustapha\\Documents\\CENTRALESUPELEC_3A\\advanced AI\\multimodal_sentiment_analysis\\src\\data_loaders\\cmu_mosi.py\u001b[0m in \u001b[0;36mload_audio\u001b[1;34m(audio_path)\u001b[0m\n\u001b[0;32m    101\u001b[0m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Unexpected datatype. Model expects sound samples to lie in [-1, 1]'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    102\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"audio shape: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maudio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 103\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0maudio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_rate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    104\u001b[0m \u001b[1;31m# ---------------------------------------------------------------------------- #\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    105\u001b[0m \u001b[1;31m#                            Define main dataloader                            #\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\core\\_methods.py\u001b[0m in \u001b[0;36m_mean\u001b[1;34m(a, axis, dtype, out, keepdims)\u001b[0m\n\u001b[0;32m    145\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    146\u001b[0m     \u001b[0mis_float16_result\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 147\u001b[1;33m     \u001b[0mrcount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_count_reduce_items\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    148\u001b[0m     \u001b[1;31m# Make this warning show up first\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    149\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mrcount\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\core\\_methods.py\u001b[0m in \u001b[0;36m_count_reduce_items\u001b[1;34m(arr, axis)\u001b[0m\n\u001b[0;32m     64\u001b[0m     \u001b[0mitems\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0max\u001b[0m \u001b[1;32min\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 66\u001b[1;33m         \u001b[0mitems\u001b[0m \u001b[1;33m*=\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmu\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnormalize_axis_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     67\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mitems\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
      ]
     }
    ],
@@ -441,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,106 +592,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        [0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        [0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        ...,\n",
-       "        [0.5529412 , 0.50980395, 0.4627451 , ..., 0.2627451 ,\n",
-       "         0.23137255, 0.25490198],\n",
-       "        [0.5294118 , 0.49019608, 0.44705883, ..., 0.29803923,\n",
-       "         0.23921569, 0.24705882],\n",
-       "        [0.50980395, 0.47843137, 0.4392157 , ..., 0.3372549 ,\n",
-       "         0.27058825, 0.23921569]],\n",
-       "\n",
-       "       [[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        [0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        [0.7254902 , 0.7254902 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        ...,\n",
-       "        [0.5529412 , 0.50980395, 0.4627451 , ..., 0.2627451 ,\n",
-       "         0.23137255, 0.25490198],\n",
-       "        [0.5294118 , 0.49019608, 0.44705883, ..., 0.29803923,\n",
-       "         0.23921569, 0.24705882],\n",
-       "        [0.50980395, 0.47843137, 0.43529412, ..., 0.3372549 ,\n",
-       "         0.27058825, 0.23921569]],\n",
-       "\n",
-       "       [[0.7294118 , 0.7294118 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        [0.7294118 , 0.7294118 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        [0.7294118 , 0.7294118 , 0.7254902 , ..., 0.91764706,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        ...,\n",
-       "        [0.54509807, 0.5058824 , 0.45490196, ..., 0.2627451 ,\n",
-       "         0.23137255, 0.25490198],\n",
-       "        [0.5254902 , 0.4862745 , 0.4392157 , ..., 0.29803923,\n",
-       "         0.23921569, 0.24705882],\n",
-       "        [0.5058824 , 0.47058824, 0.43137255, ..., 0.3372549 ,\n",
-       "         0.27058825, 0.23921569]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.9098039 ,\n",
-       "         0.9137255 , 0.91764706],\n",
-       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9098039 ,\n",
-       "         0.9137255 , 0.91764706],\n",
-       "        [0.72156864, 0.72156864, 0.7254902 , ..., 0.9137255 ,\n",
-       "         0.9137255 , 0.91764706],\n",
-       "        ...,\n",
-       "        [0.54901963, 0.50980395, 0.45490196, ..., 0.25882354,\n",
-       "         0.23137255, 0.24705882],\n",
-       "        [0.52156866, 0.49019608, 0.4392157 , ..., 0.29411766,\n",
-       "         0.23529412, 0.24705882],\n",
-       "        [0.5019608 , 0.4745098 , 0.42745098, ..., 0.3137255 ,\n",
-       "         0.25490198, 0.24705882]],\n",
-       "\n",
-       "       [[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.9098039 ,\n",
-       "         0.9137255 , 0.91764706],\n",
-       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9098039 ,\n",
-       "         0.9137255 , 0.91764706],\n",
-       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9137255 ,\n",
-       "         0.9137255 , 0.91764706],\n",
-       "        ...,\n",
-       "        [0.54901963, 0.50980395, 0.45882353, ..., 0.25882354,\n",
-       "         0.23137255, 0.24705882],\n",
-       "        [0.52156866, 0.49019608, 0.44313726, ..., 0.29411766,\n",
-       "         0.23529412, 0.24705882],\n",
-       "        [0.5019608 , 0.4745098 , 0.42745098, ..., 0.3137255 ,\n",
-       "         0.25490198, 0.24705882]],\n",
-       "\n",
-       "       [[0.7254902 , 0.7254902 , 0.7254902 , ..., 0.9098039 ,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9098039 ,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        [0.72156864, 0.72156864, 0.72156864, ..., 0.9137255 ,\n",
-       "         0.91764706, 0.91764706],\n",
-       "        ...,\n",
-       "        [0.5529412 , 0.5137255 , 0.4627451 , ..., 0.25882354,\n",
-       "         0.23137255, 0.24705882],\n",
-       "        [0.5294118 , 0.49411765, 0.44705883, ..., 0.29411766,\n",
-       "         0.23529412, 0.24705882],\n",
-       "        [0.50980395, 0.47843137, 0.43137255, ..., 0.3137255 ,\n",
-       "         0.25490198, 0.24705882]]], dtype=float32)"
+       "(41402,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[1000][0]"
+    "data[7][1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "32\n",
+      "33\n",
+      "35\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "81\n",
+      "85\n",
+      "87\n",
+      "90\n",
+      "103\n",
+      "110\n",
+      "113\n",
+      "126\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_211700/374582456.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Mustapha\\Documents\\CENTRALESUPELEC_3A\\advanced AI\\multimodal_sentiment_analysis\\src\\data_loaders\\cmu_mosi.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    152\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 153\u001b[1;33m         \u001b[0mvideo_seq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvideo_sequences\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdevide_images_with\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    154\u001b[0m         return (video_seq.astype(self.output_type),\n\u001b[0;32m    155\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maudio_sequences\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutput_type\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1000):\n",
+    "    if len(data[i][1].shape) != 2:\n",
+    "        print(i)"
    ]
   }
  ],
