--- a/notebooks/Perceiver/tests.ipynb
+++ b/notebooks/Perceiver/tests.ipynb
@@ -439,8 +439,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Caching videos for training split: 100%|██████████| 40/40 [00:04<00:00,  9.35it/s]\n",
-      "Caching videos for validation split: 100%|██████████| 10/10 [00:00<00:00, 11.48it/s]\n"
+      "Caching videos for training split: 100%|██████████| 40/40 [00:04<00:00,  9.89it/s]\n",
+      "Caching videos for validation split: 100%|██████████| 10/10 [00:00<00:00, 11.03it/s]\n"
      ]
     }
    ],
@@ -557,18 +557,21 @@
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
-    "model = PerceiverForMultimodalAutoencoding.from_pretrained(\"deepmind/multimodal-perceiver\",)\n",
+    "model = PerceiverForMultimodalAutoencoding.from_pretrained(\"deepmind/multimodal-perceiver\")\n",
     "# model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# model = PerceiverForMultimodalAutoencoding.from_pretrained(\"deepmind/multimodal-perceiver\")\n",
+    "\n",
+    "# image = torch.rand(1, 16, 224, 224) # Not good\n",
     "image = torch.rand(1, 16, 3, 224, 224)\n",
-    "audio =  torch.rand(1,480000, 1)\n",
+    "audio =  torch.rand(1, 30720, 1)\n",
     "\n",
     "inputs = dict(\n",
     "    image = image,\n",
@@ -580,7 +583,7 @@
     "image_chunk_size = np.prod((16, 224, 224)) // nchunks\n",
     "audio_chunk_size = audio.shape[1] // model.config.samples_per_patch // nchunks\n",
     "\n",
-    "chunk_idx = 0\n",
+    "chunk_idx = 127\n",
     "subsampling = {\n",
     "    \"image\": torch.arange(image_chunk_size * chunk_idx, image_chunk_size * (chunk_idx + 1)),\n",
     "    \"audio\": torch.arange(audio_chunk_size * chunk_idx, audio_chunk_size * (chunk_idx + 1)),\n",
@@ -590,25 +593,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mus5900/anaconda3/envs/nlp/lib/python3.9/site-packages/torch/functional.py:445: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  ../aten/src/ATen/native/TensorShape.cpp:2157.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "model.config.samples_per_patch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "output = model(inputs = inputs , subsampled_output_points=subsampling)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,16 +631,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 67, 574, 281, 663,   0]])"
+       "tensor([[663,  49, 199, 637, 574]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
