ipynb for wav2vec

--- a/notebooks/wav2vec/wav2vec.ipynb
+++ b/notebooks/wav2vec/wav2vec.ipynb
@@ -1,22 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "interpreter": {
    "hash": "d650a3b94c458c273a536969f20832049d87778dafdd87df0ff4ffcada142abe"
